2010-09-27  James Robinson  <jamesr@chromium.org>

Reviewed by Simon Fraser.

        Repaint test for dynamically changing an SVG element's style attribute
        https://bugs.webkit.org/show_bug.cgi?id=46499

        * fast/repaint/repaint-svg-after-style-change-expected.checksum: Added.
        * fast/repaint/repaint-svg-after-style-change-expected.png: Added.
        * fast/repaint/repaint-svg-after-style-change-expected.txt: Added.
        * fast/repaint/repaint-svg-after-style-change.html: Added.
2010-09-27  James Robinson  <jamesr@chromium.org>

        Reviewed by Simon Fraser.

        Revert r63307, it broke repainting dynamically changed SVG content
        https://bugs.webkit.org/show_bug.cgi?id=46499

        This patch reverts r63307 and adds a regression test for what broke.

        Test: fast/repaint/repaint-svg-after-style-change.html

        * rendering/RenderForeignObject.cpp:
        (WebCore::RenderForeignObject::layout):
        * rendering/RenderPath.cpp:
        (WebCore::RenderPath::layout):
        * rendering/RenderSVGContainer.cpp:
        (WebCore::RenderSVGContainer::layout):
        * rendering/RenderSVGImage.cpp:
        (WebCore::RenderSVGImage::layout):
        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::layout):
        * rendering/RenderSVGText.cpp:
        (WebCore::RenderSVGText::layout):

Canonical link: https://commits.webkit.org/59132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68444 268f45cc-cd09-0410-ab3c-d52691b4dbfc